# dashboard

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Taskfile.yml  builder.Dockerfile  config.prod.yaml  config.yaml  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  router.go  tsconfig.base.json
.cargo/: config.toml
.claude/commands/: client-dev.md  server-dev.md
.github/prompts/: client-dev.prompt.md  server-dev.prompt.md
.github/workflows/: android-debug.yml  android-release.yml  docker-image.yml  publish-docker.yml
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs
apps/web/server/src/handlers/: auth.rs  bookmark.rs  collection.rs  entry.rs  media.rs  mod.rs  tag.rs  tiptap.rs  user.rs
apps/web/server/src/middleware/: auth.rs  mod.rs
apps/web/server/src/service/: bookmark.rs  collection.rs  entry.rs  mod.rs  tag.rs  tiptap.rs  user.rs
apps/web/server/src/tests/: bookmark.rs  collection.rs  entry.rs  mod.rs  tag.rs  tiptap.rs
apps/web/server/src/tests/cases/: bookmark.md  entry.md  tag.md  tiptap.md
client/: flomo.html  index.html  journal.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vite.dashboard.config.ts  vite.flomo.config.ts  vite.journal.config.ts  vitest.config.ts
client/mock/: flomo.json
client/patches/: swiper+12.0.2.patch
client/public-flomo/: shared
client/src/: App.tsx  DashboardApp.tsx  FlomoApp.tsx  JournalApp.tsx  close-action-provider.tsx  dashboard-main.tsx  editor-provider.tsx  flomo-main.tsx  index-journal.css  index.css  journal-main.tsx  (+1 more)
client/src-tauri/: Cargo.toml  setup.md  tauri.conf.json  tauri.dashboard.conf.json  tauri.flomo.conf.json  tauri.journal.conf.json
client/src-tauri/crates/journal/: Cargo.toml
client/src-tauri/crates/journal/src/: error.rs  lib.rs  migration.rs  model.rs  repository.rs  sync.rs
client/src-tauri/crates/sqlite/: Cargo.toml
client/src-tauri/crates/sqlite/src/: bootstrap.rs  error.rs  lib.rs  location.rs  migration.rs  pool.rs
client/src-tauri/icons/: icon.icns
client/src-tauri/scripts/: apply-android-xml.js
client/src-tauri/src/: flomo_db.rs  journal.rs  journal_db.rs  lib.rs  main.rs  media_cache.rs
compose/: docker-compose.yaml
config/: config.go  db.go
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/bookmark/: error.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/collection/: error.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/entry/: error.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/media/: delete.rs  error.rs  mod.rs  object_store.rs  repository.rs  repressign_job.rs  serve.rs  upload.rs
crates/application/src/oidc/: client.rs  error.rs  mod.rs  types.rs
crates/application/src/tag/: error.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/tiptap/: error.rs  handlers.rs  mod.rs  ports.rs
crates/application/src/user/: error.rs  handlers.rs  mod.rs  ports.rs
crates/cache/journal/: Cargo.toml
crates/cache/journal/src/: error.rs  lib.rs  migration.rs  sync_status.rs
crates/cache/journal/src/repository/: entry.rs  mod.rs  sync_meta.rs  tag.rs  tiptap.rs  user.rs
crates/cache/media/: Cargo.toml
crates/cache/media/src/: auth.rs  db.rs  fs.rs  lib.rs  server.rs  tasks.rs  tests.rs  upload.rs
crates/cache/sqlite/: Cargo.toml
crates/cache/sqlite/src/: error.rs  lib.rs  pool.rs  time.rs
crates/cache/sqlite/src/migration/: catalog.rs  mod.rs  runner.rs  tests.rs
crates/commands/: Cargo.toml
crates/commands/src/: entry.rs  error.rs  lib.rs  stats.rs  tag.rs  tiptap.rs
crates/commands/src/tests/: entry.rs  mod.rs  stats.rs  tag.rs  tiptap.rs
crates/commands/src/tests/cases/: entry.md  tag.md  tiptap.md
crates/contracts/: Cargo.toml
crates/contracts/src/: auth.rs  bookmark.rs  collection.rs  entry.rs  frontend.rs  lib.rs  media.rs  tag.rs  tiptap.rs  user.rs
crates/db/: Cargo.toml
crates/db/src/: bootstrap.rs  lib.rs
crates/db/src/bookmark/: mod.rs  repository.rs
crates/db/src/collection/: mod.rs  repository.rs
crates/db/src/entry/: mod.rs  repository.rs
crates/db/src/media/: mod.rs  tests.rs
crates/db/src/migration/: runner.rs  runner_tests.rs  schema_v0004.rs
crates/db/src/quick_note/: mod.rs  repository.rs
crates/db/src/tag/: mod.rs  repository.rs
crates/db/src/tiptap/: mod.rs  repository.rs
crates/db/src/todo/: mod.rs  repository.rs
crates/db/src/user/: mod.rs  repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: audit_fields.rs  bookmark.rs  card.rs  collection.rs  echo.rs  entry.rs  error.rs  folder.rs  ids.rs  lib.rs  media.rs  quick_note.rs  tag.rs  tiptap.rs  todo.rs  user.rs  watch.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/media/: config.rs  content_type.rs  mod.rs  object_store.rs  tests.rs
crates/infrastructure/src/oidc/: config.rs  http_client.rs  mod.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: error.rs  job.rs  lib.rs  scheduler.rs
crates/sync/: Cargo.toml
crates/sync/src/: error.rs  lib.rs  module.rs  ports.rs
crates/sync/src/migration/: mod.rs
crates/sync/src/schema/: entry.rs  mod.rs  tag.rs  tiptap.rs
docs/: adr.md  refactor.md  task.md
handler/: handler.go
log/: logger.go
middleware/: cors.go  idempotency.go  idempotency_test.go  jwt.go  jwt_test.go  logging.go  session.go  session_test.go
migration/: helpers.go  migration.go  migrations.go
model/: blog.go  blogv2.go  bookmark.go  bookmarkv2.go  card.go  collection.go  collectionv2.go  echo.go  echov2.go  entry.go  entryv2.go  folder.go  media.go  model.go  pomodoro.go  quicknote.go  quicknotev2.go  statisticv2.go  tag.go  tagv2.go  tiptap.go  tiptapv2.go  todo.go  todov2.go  user.go  userv2.go  watch.go  watchv2.go
openspec/: config.yaml
service/: crypt.go  feed.go  init.go  minio.go  oidc.go  pruner.go  scheduler.go  worker.go
xtask/: Cargo.toml
xtask/src/: export_contracts.rs  main.rs
(+395 files in other folders)
