[workspace]
members = [
    "apps/web/server",
    "crates/application",
    "crates/contracts",
    "crates/db",
    "crates/domain",
    "crates/infrastructure",
    "crates/logging",
    "crates/scheduler",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
# Internal
only-application = { path = "crates/application" }
only-contracts = { path = "crates/contracts" }
only-db = { path = "crates/db" }
only-domain = { path = "crates/domain" }
only-infrastructure = { path = "crates/infrastructure" }
only-logging = { path = "crates/logging" }
only-scheduler = { path = "crates/scheduler" }
only-xtask = { path = "xtask" }

# External
aes-gcm = "0.10"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
bytes = "1"
chrono = "0.4"
cron = "0.12"
dotenvy = "0.15"
futures = "0.3"
humantime = "2"
mime_guess = "2"
minio = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
pretty_assertions = "1"
rand = "0.8"
r2d2 = "0.8"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "minio"] }
rusqlite = "0.37"
serde = "1.0"
serde_json = "1.0"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "time", "uuid"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
ts-rs = "12.0"
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"
