[package]
name = "only-commands"
version.workspace = true
edition.workspace = true

[dependencies]
only-cache-journal = { workspace = true }
only-contracts = { workspace = true }
only-logging = { workspace = true }
only-sync-schema = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
only-cache-journal = { workspace = true, features = ["test-utils"] }
only-logging = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
