[package]
name = "only-db"
version.workspace = true
edition.workspace = true

[lib]
name = "only_db_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
only-application = { workspace = true }
only-domain = { workspace = true }
only-logging = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
time = { workspace = true }
