[package]
name = "only-infrastructure"
version.workspace = true
edition.workspace = true

[lib]
name = "only_infrastructure"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
only-application = { workspace = true }
only-logging = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = "1"
mime_guess = { workspace = true }
minio = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
