[package]
name = "only-infrastructure"
version.workspace = true
edition.workspace = true

[lib]
name = "only_infrastructure"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
only-application = { workspace = true }
only-logging = { workspace = true }
bytes = { workspace = true }
mime_guess = { workspace = true }
rust-s3 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
