[package]
name = "only-sync"
version.workspace = true
edition.workspace = true

[lib]
name = "only_sync"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
only-logging = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
