[package]
name = "only-cache-media"
version.workspace = true
edition.workspace = true

[lib]
name = "only_cache_media"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
only-logging = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
rust-s3 = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
