[package]
name = "app-journal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
app-sqlite = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["time"] }
uuid = { workspace = true }
